common-applications/infra-test-cluster/hk/grafana/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: grafana
  name: grafana
