common-applications/infra-test-cluster/hk/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: grafana
spec:
  ports:
  - name: http-port
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: grafana
  type: ClusterIP
